--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,98 +6,109 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="#D6AB87"
+        android:background="#C6D9F1"
         tools:context="com.vaiotech.attendaceapp.MainActivity">
 
        <LinearLayout
-           android:layout_margin="10dp"
-           android:padding="10dp"
-           android:background="#FFF5EC"
-           android:id="@+id/linearOne"
+           android:weightSum="4"
            android:layout_alignParentTop="true"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
-           <TextView
-               android:textColor="#6B5644"
-               android:id="@+id/adminName"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:text="Kanaiyalal Thacker"
-               android:gravity="center"
-               android:textSize="30dp"
-               android:singleLine="true" />
-       </LinearLayout>
-        <LinearLayout
-            android:layout_above="@+id/linerTwo"
-            android:layout_below="@+id/linearOne"
-            android:id="@+id/liner"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical"
-            >
-            <Button
-                android:textSize="30dp"
-                android:layout_margin="5dp"
-                android:textColor="#FFF5EC"
-                android:background="#512500"
-                android:onClick="scanQRCode"
-                android:id="@+id/button1"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="QR Code Scanner"
-                android:lines="@integer/viewfinder_border_width" />
-            <Button
-                android:textSize="30dp"
-                android:layout_margin="5dp"
-                android:textColor="#FFF5EC"
-                android:background="#512500"
-                android:onClick="scanCard"
-                android:id="@+id/button2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="Smart Card Scanner"
-                android:lines="@integer/viewfinder_border_length" />
-            <Button
-                android:textSize="30dp"
-                android:layout_margin="5dp"
-                android:textColor="#FFF5EC"
-                android:background="#512500"
-                android:onClick="scanVoice"
-                android:id="@+id/button3"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:text="Voice Scanner"/>
-        </LinearLayout>
-       <LinearLayout
-           android:layout_alignParentBottom="true"
-           android:id="@+id/linerTwo"
+           android:id="@+id/mainLinearLayout"
            android:layout_width="fill_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="fill_parent"
            android:orientation="vertical"
-           >
-           <RadioGroup
+       >
+
+           <LinearLayout
+               android:layout_margin="5dp"
+               android:layout_weight="1"
                android:orientation="horizontal"
-               android:layout_width="fill_parent"
-               android:layout_height="wrap_content">
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               >
 
-               <RadioButton
-                   android:layout_weight="1"
-                   android:text="Single Scane"
-                   android:layout_width="0dp"
-                   android:layout_height="wrap_content" />
+                   <RadioGroup
+                       android:id="@+id/modeRadioGroup"
+                       android:layout_gravity="center"
+                       android:orientation="horizontal"
+                       android:layout_width="fill_parent"
+                       android:layout_height="wrap_content">
 
-               <RadioButton
-                   android:layout_weight="1"
-                   android:text="Batch Scan"
-                   android:layout_width="0dp"
-                   android:layout_height="wrap_content" />
+                       <RadioButton
+                           android:id="@+id/singleModeRB"
+                           android:textSize="20sp"
+                           android:textColor="#000000"
+                           android:layout_weight="1"
+                           android:text="Single Mode"
+                           android:layout_width="0dp"
+                           android:layout_height="wrap_content"
+                           android:checked="true" />
 
-           </RadioGroup>
-        </LinearLayout>
+                       <RadioButton
+                           android:id="@+id/batchModeRB"
+                           android:textSize="20sp"
+                           android:textColor="#000000"
+                           android:layout_weight="1"
+                           android:text="Batch Mode"
+                           android:layout_width="0dp"
+                           android:layout_height="wrap_content"
+                           android:checked="false" />
 
+                   </RadioGroup>
+               </LinearLayout>
+
+           <LinearLayout
+               android:layout_margin="5dp"
+               android:layout_weight="1"
+               android:orientation="horizontal"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_gravity="center_horizontal">
+                    <Button
+                        android:textSize="25sp"
+                        android:textColor="#FFF5EC"
+                        android:background="#595959"
+                        android:onClick="scanQRCode"
+                        android:id="@+id/button1"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Start QR Scan"
+                        android:lines="@integer/viewfinder_border_width" />
+                </LinearLayout>
+           <LinearLayout
+               android:layout_margin="5dp"
+               android:layout_weight="1"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_gravity="center_horizontal">
+                    <Button
+                        android:textSize="25sp"
+                        android:textColor="#FFF5EC"
+                        android:background="#FFC000"
+                        android:onClick="scanCard"
+                        android:id="@+id/button2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Smart Card Scan"
+                        android:lines="@integer/viewfinder_border_length" />
+                </LinearLayout>
+           <LinearLayout
+               android:layout_margin="5dp"
+               android:layout_weight="1"
+               android:orientation="horizontal"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:layout_gravity="center_horizontal">
+                    <Button
+                        android:textSize="25sp"
+                        android:textColor="#FFF5EC"
+                        android:background="#92D050"
+                        android:onClick="scanVoice"
+                        android:id="@+id/button3"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Start Voice Scan"/>
+                </LinearLayout>
+       </LinearLayout>
     </RelativeLayout>
 
 
