--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -6,69 +6,63 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#D6AB87"
+    android:background="#FFC000"
     tools:context="com.vaiotech.attendaceapp.ScanCardSingleActivity">
 
+
+
+
+
     <TextView
         android:paddingLeft="10dp"
-        android:textSize="30sp"
-        android:textColor="#512500"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ID : "
-        android:id="@+id/idLableTV"
+        android:text="Admin Name : "
+        android:id="@+id/adminNameLableTV"
         android:layout_alignParentTop="true"
         />
 
     <TextView
-        android:textSize="30sp"
-        android:textColor="#512500"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/idValueTV"
-        android:layout_toRightOf="@+id/idLableTV"
+        android:text="----------------"
+        android:id="@+id/adminValueLableTV"
+        android:layout_toRightOf="@+id/adminNameLableTV"
+        android:layout_below="@+id/idLableTV"
         android:layout_alignParentTop="true"
         />
 
-    <TextView
-        android:paddingLeft="10dp"
-        android:textSize="30sp"
-        android:textColor="#512500"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Name : "
-        android:id="@+id/nameLableTV"
-        android:layout_below="@+id/idLableTV"
-        />
+
+    <View
+        android:layout_below="@+id/adminNameLableTV"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:id="@+id/firstHLine"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:background="#080807"/>
 
     <TextView
-        android:textSize="30sp"
-        android:textColor="#512500"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/nameValueTV"
-        android:layout_toRightOf="@+id/nameLableTV"
-        android:layout_below="@+id/idLableTV"
-        />
 
-    <TextView
-        android:textSize="40sp"
-        android:textColor="#512500"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time"
         android:id="@+id/timeTV"
         android:layout_toLeftOf="@+id/hhET"
-        android:layout_above="@+id/firstHLine"
+        android:layout_below="@+id/firstHLine"
         android:layout_marginRight="15dp"
         />
 
     <EditText
         android:inputType="number"
         android:textStyle="bold"
-        android:textSize="45sp"
+        android:textSize="30sp"
         android:gravity="center"
         android:width="40dp"
         android:textColor="#E81B11"
@@ -77,19 +71,19 @@
         android:layout_height="wrap_content"
         android:id="@+id/hhET"
         android:maxLength="2"
-        android:layout_above="@+id/firstHLine"
+        android:layout_below="@+id/firstHLine"
         android:layout_centerHorizontal="true"
         />
 
     <TextView
-        android:textSize="45sp"
-        android:textColor="#512500"
+        android:textSize="30sp"
+        android:textColor="#080807"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
-        android:layout_above="@+id/firstHLine"
+        android:layout_below="@+id/firstHLine"
         android:id="@+id/seperateTimeTV"
         android:layout_toRightOf="@+id/hhET"
         android:textStyle="bold" />
@@ -97,7 +91,7 @@
     <EditText
         android:inputType="number"
         android:textStyle="bold"
-        android:textSize="45sp"
+        android:textSize="30sp"
         android:maxLength="2"
         android:gravity="center"
         android:width="40dp"
@@ -106,25 +100,144 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mmET"
-        android:layout_above="@+id/firstHLine"
+        android:layout_below="@+id/firstHLine"
         android:layout_toRightOf="@+id/seperateTimeTV"
         />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Date"
+        android:id="@+id/dateTV"
+        android:layout_toLeftOf="@+id/hhET"
+        android:layout_below="@+id/timeTV"
+        android:layout_marginRight="15dp"
+        />
+
+    <EditText
+        android:layout_marginTop="10dp"
+        android:inputType="number"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:width="40dp"
+        android:textColor="#E81B11"
+        android:background="#080807"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ddET"
+        android:maxLength="2"
+        android:layout_below="@+id/timeTV"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="30sp"
+        android:textColor="#080807"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="/"
+        android:layout_below="@+id/timeTV"
+        android:id="@+id/seperateDateTV"
+        android:layout_toRightOf="@+id/hhET"
+        android:textStyle="bold" />
+
+    <EditText
+        android:layout_marginTop="10dp"
+        android:inputType="number"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:maxLength="2"
+        android:gravity="center"
+        android:width="40dp"
+        android:textColor="#E81B11"
+        android:background="#080807"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/MMET"
+        android:layout_below="@+id/timeTV"
+        android:layout_toRightOf="@+id/seperateTimeTV"
+        />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="30sp"
+        android:textColor="#080807"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="/"
+        android:layout_below="@+id/timeTV"
+        android:id="@+id/seperateDateMMTV"
+        android:layout_toRightOf="@+id/MMET"
+        android:textStyle="bold" />
+
+    <EditText
+        android:layout_marginTop="10dp"
+        android:inputType="number"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:maxLength="2"
+        android:gravity="center"
+        android:width="40dp"
+        android:textColor="#E81B11"
+        android:background="#080807"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/YYET"
+        android:layout_below="@+id/timeTV"
+        android:layout_toRightOf="@+id/seperateDateMMTV"
+        />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ID : "
+        android:id="@+id/idLableTV"
+        android:layout_below="@+id/seperateDateMMTV"
+        />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/idValueTV"
+        android:layout_toRightOf="@+id/idLableTV"
+        android:layout_below="@+id/seperateDateMMTV"
+        />
+
+
+
 
     <View
         android:layout_above="@+id/getInfoBUTTON"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:id="@+id/firstHLine"
+        android:id="@+id/secHLine"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:background="#512500"/>
+        android:background="#080807"/>
 
 
     <Button
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
-        android:textColor="#FFF5EC"
-        android:background="#512500"
+        android:textColor="#ffffff"
+        android:background="#080807"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -137,11 +250,11 @@
 
     <Button
         android:layout_alignParentStart="true"
-        android:layout_margin="30dp"
-        android:textSize="20sp"
-        android:textColor="#FFF5EC"
-        android:background="#512500"
-        android:width="100dp"
+        android:layout_margin="20dp"
+        android:textSize="25sp"
+        android:textColor="#ffffff"
+        android:background="#89AC3F"
+        android:width="130dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="In Time"
@@ -152,11 +265,11 @@
         />
 
     <Button
-        android:layout_margin="30dp"
-        android:textSize="20sp"
-        android:textColor="#FFF5EC"
-        android:background="#512500"
-        android:width="100dp"
+        android:layout_margin="20dp"
+        android:textSize="25sp"
+        android:textColor="#ffffff"
+        android:background="#A02E2B"
+        android:width="130dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Out Time"
