--- a/app/src/main/res/menu/menu_contact_us.xml
+++ b/app/src/main/res/menu/menu_contact_us.xml
@@ -1,4 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.vaiotech.attendaceapp.ScanQRCodeActivity" >
+    tools:context="com.vaiotech.attendaceapp.ContactUsActivity">
 </menu>
