--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#D6AB87"
+    android:background="#C5DBF1"
     tools:context="com.vaiotech.attendaceapp.LoginActivity">
 
 
     <TextView
         android:textSize="20sp"
-        android:textColor="#512500"
+        android:textColor="#000000"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,8 +24,8 @@
     <EditText
         android:textSize="20sp"
         android:layout_margin="10dp"
-        android:textColor="#FFF5EC"
-        android:background="#512500"
+        android:textColor="#C5DBF1"
+        android:background="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/loginIDET"
@@ -39,7 +39,7 @@
 
     <TextView
         android:textSize="20sp"
-        android:textColor="#512500"
+        android:textColor="#000000"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -51,8 +51,8 @@
     <EditText
         android:textSize="20sp"
         android:layout_margin="10dp"
-        android:textColor="#FFF5EC"
-        android:background="#512500"
+        android:textColor="#C5DBF1"
+        android:background="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/passwordET"
@@ -70,14 +70,14 @@
         android:layout_marginTop="40dp"
         android:id="@+id/firstHLine"
         android:layout_marginBottom="40dp"
-        android:background="#512500"/>
+        android:background="#000000"/>
 
     <Button
         android:onClick="login"
         android:layout_marginBottom="30dp"
         android:textSize="20sp"
-        android:textColor="#FFF5EC"
-        android:background="#512500"
+        android:textColor="#C5DBF1"
+        android:background="#000000"
         android:width="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
