--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -191,7 +191,7 @@
         android:background="#080807"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/YYET"
+        android:id="@+id/yyET"
         android:layout_below="@+id/timeTV"
         android:layout_toRightOf="@+id/seperateDateMMTV"
         />
