--- a/app/src/main/res/layout/activity_scan_qrcode_single.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_single.xml
@@ -1,13 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#FFC000"
-    tools:context="com.vaiotech.attendaceapp.ScanCardBatchActivity">
+    android:background="#353535"
+    tools:context="com.vaiotech.attendaceapp.ScanQRCodeSingleActivity">
+
 
 
     <TextView
@@ -42,8 +41,6 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:background="#080807"/>
-
-
 
     <TextView
 
@@ -196,41 +193,56 @@
         />
 
     <TextView
-        android:padding="10dp"
-        android:layout_marginTop="20dp"
-        android:text="0"
-        android:textSize="100sp"
-        android:gravity="center"
-        android:textColor="#E81B11"
-        android:background="#080807"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/counterValTV"
-        android:layout_below="@+id/dateTV"
-        android:layout_centerHorizontal="true"
+        android:text="ID : "
+        android:id="@+id/idLableTV"
+        android:layout_below="@+id/seperateDateMMTV"
         />
 
     <TextView
-        android:layout_marginTop="5dp"
-        android:text="Count"
-        android:textSize="25sp"
-        android:gravity="center"
-        android:textColor="#000000"
+        android:layout_marginTop="10dp"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/counterLableTV"
-        android:layout_below="@+id/counterValTV"
-        android:layout_centerHorizontal="true"
+        android:text=""
+        android:id="@+id/idValueTV"
+        android:layout_toRightOf="@+id/idLableTV"
+        android:layout_below="@+id/seperateDateMMTV"
         />
 
+
+
+
     <View
-        android:layout_above="@+id/inBUTTON"
+        android:layout_above="@+id/getInfoBUTTON"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:id="@+id/secondHLine"
+        android:id="@+id/secHLine"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
-        android:background="#000000"/>
+        android:background="#080807"/>
+
+
+    <Button
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#ffffff"
+        android:background="#080807"
+        android:width="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Info"
+        android:onClick="getInfo"
+        android:enabled="false"
+        android:id="@+id/getInfoBUTTON"
+        android:layout_above="@+id/inBUTTON"
+        />
 
     <Button
         android:layout_alignParentStart="true"
