--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -199,7 +199,8 @@
     <TextView
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
-        android:textSize="30sp"
+        android:paddingRight="0dp"
+        android:textSize="22sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -210,17 +211,42 @@
 
     <TextView
         android:layout_marginTop="10dp"
-        android:textSize="30sp"
+        android:textSize="22sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/idValueTV"
         android:layout_toRightOf="@+id/idLableTV"
+        android:layout_toEndOf="@+id/idLableTV"
         android:layout_below="@+id/seperateDateMMTV"
         />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="0dp"
+        android:textSize="22sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Name : "
+        android:id="@+id/userNameLableTV"
+        android:layout_below="@+id/idLableTV"
+        />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textSize="22sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:id="@+id/userNameValueTV"
+        android:layout_toRightOf="@+id/userNameLableTV"
+        android:layout_toEndOf="@+id/userNameLableTV"
+        android:layout_below="@+id/idLableTV"
+        />
 
 
     <View
@@ -262,7 +288,7 @@
         android:id="@+id/inBUTTON"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        />
+        android:enabled="false" />
 
     <Button
         android:layout_margin="20dp"
