--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -248,6 +248,16 @@
         android:layout_below="@+id/idLableTV"
         />
 
+    <com.romainpiel.shimmer.ShimmerTextView
+        android:id="@+id/shimmer_tv"
+        android:text="Scanning..."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#444"
+        android:textSize="20sp"
+        android:layout_below="@+id/userNameValueTV"
+        />
+
 
     <View
         android:layout_above="@+id/getInfoBUTTON"
