--- a/app/src/main/res/layout/activity_scan_card_batch.xml
+++ b/app/src/main/res/layout/activity_scan_card_batch.xml
@@ -215,7 +215,7 @@
         android:text="Count"
         android:textSize="25sp"
         android:gravity="center"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/counterLableTV"
@@ -223,13 +223,25 @@
         android:layout_centerHorizontal="true"
         />
 
+    <com.romainpiel.shimmer.ShimmerTextView
+        android:id="@+id/shimmer_tv"
+        android:text="Scanning..."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#080807"
+        android:textSize="20sp"
+        android:layout_above="@+id/secondHLine"
+        android:layout_centerHorizontal="true"
+        />
+
+
     <View
         android:layout_above="@+id/inBUTTON"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/secondHLine"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="#000000"/>
 
     <Button
