--- a/app/src/main/res/layout/activity_scan_qrcode_single.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_single.xml
@@ -4,9 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#1267E9"
+    android:background="#75001A"
     tools:context="com.vaiotech.attendaceapp.ScanQRCodeSingleActivity">
-
 
 
     <TextView
@@ -44,7 +43,6 @@
         android:background="#080807"/>
 
     <TextView
-
         android:textSize="30sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
@@ -69,7 +67,7 @@
         android:id="@+id/hhET"
         android:maxLength="2"
         android:layout_below="@+id/firstHLine"
-        android:layout_centerHorizontal="true"
+        android:layout_toLeftOf="@+id/seperateTimeTV"
         />
 
     <TextView
@@ -82,7 +80,7 @@
         android:text=":"
         android:layout_below="@+id/firstHLine"
         android:id="@+id/seperateTimeTV"
-        android:layout_toRightOf="@+id/hhET"
+        android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
     <EditText
@@ -128,7 +126,7 @@
         android:id="@+id/ddET"
         android:maxLength="2"
         android:layout_below="@+id/timeTV"
-        android:layout_centerHorizontal="true"
+        android:layout_toLeftOf="@+id/seperateDateTV"
         />
 
     <TextView
@@ -142,7 +140,7 @@
         android:text="/"
         android:layout_below="@+id/timeTV"
         android:id="@+id/seperateDateTV"
-        android:layout_toRightOf="@+id/hhET"
+        android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
     <EditText
