--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -173,6 +173,7 @@
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:id="@+id/changePasswordButton"
+        android:onClick="save"
         />
 
 
